--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </li>
                      <!-- -----------EDIT ME! #1 Replace your nav titles here------------- -->
                     <li class="page-scroll">
-                        <a href="#portfolio">Gallery</a>
+                        <a href="#portfolio">Pictures</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">Things I Like</a>
@@ -101,7 +101,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Gallery</h2>
+                    <h2>Pictures</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="item">
                     <!-- CHANGE THIS IMAGE -->
-                      <img src="https://1885.campdudley.org/CD_OLA/images/atGreeting_Kiniya.jpg" alt="Fourth of July">
+                      <img src="https://1885.campdudley.org/CD_OLA/images/atGreeting_Kiniya.jpg" alt="Fourth of July" width="700">
                       <div class="carousel-caption">
                         <!-- <h3>Caption Text</h3> -->
                         <h3>Fourth of July!</h3>
@@ -166,23 +166,23 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Things I Like</h2>
-                    <h3> The Minions have been searching for the most evil boss for centures. They've had some bad ones. </h3>
+                    <h3> Some of the things that fill up my life </h3>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
             <!-- ----EDIT ME! #3 Put whatever you want into the similarities section. (Keep the "col-lg-4" class if you want to have the three columns.) ---- -->
                 <div class = "col-lg-4">
-                    <p>Camp</p>
-                    <img src="images/cabin.png" width="300">
+                    <p class="middle">Camp</p>
+                    <img src="img/cabin.png" width="350">
                 </div>
                 <div class = "col-lg-4">
-                    <p>Baking</p>
-                    <img src="images/cake.png" width="300">
+                    <p class="middle">Baking</p>
+                    <img src="img/cake.png" width="350">
                 </div>
                 <div class = "col-lg-4">
-                    <p>Ocean</p>
-                    <img src="images/submarine.png" width="250">
+                    <p class="middle">Ocean and Beach</p>
+                    <img src="img/submarine.png" width="350">
                 </div>
 
                 <!-- -------------------END EDIT ME! #3-------------------- -->
@@ -203,8 +203,8 @@
             </div>
             <!-- ----EDIT ME! #4 Put whatever you want into the differences section. (Keep the "col-lg-4 class" if you want to have the three columns.) ---- -->
              <div class="center">
-                <p>Camp Kiniya</p>
-                <img src="img/cabin.png" wdith="300">
+                <p class="middle">Camp Kiniya</p>
+                <img src="img/cabin.png" width="400" id="camp-pic">
             </div>
 
             <!-- -------------------END EDIT ME! #4-------------------- -->
@@ -219,7 +219,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Made with ♥ at Flatiron School
+                        Made with ♥ by Hadley Sager and the Flatiron School
                     </div>
                 </div>
             </div>
